--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,2 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Merriweather:400,700');
+
+
 // Our variables
-$base-font-family: sans-serif;
+$base-font-family: 'Merriweather', serif;
+
+$brand-color: #cce2d1;
+
+$font-grey: #808080;
