--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -9,5 +9,8 @@
 <!-- favicon -->
 <link rel="shortcut icon" type="image/x-icon" href="{{ site.url }}/favicon.ico" type="image/x-icon">
 
+<!-- Bootstrap -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+
 <!--CSS-->
 <link rel="stylesheet" type="text/css" href="css/main.css">
