--- a/_includes/_navbar.html
+++ b/_includes/_navbar.html
@@ -1,3 +1,20 @@
-<article>
+<!-- <article>
   <h4>Hello, I am the navigation bar!</h4>
+</article> -->
+<article class="nav">
+  <section class="color-bar"></section>
+  <section class="content">
+    <div class="blurb">
+      <h1><a href="/">Emily Gorey</a></h1>
+      <h4>------------------------</h4>
+      <ul class="list-unstyled">
+        <li><a href="/about">about</a></li>
+        <li><a href="/resume">resume</a></li>
+        <li><a href="/portfolio">portfolio</a></li>
+        <br>
+        <li><a href="/blog">blog</a></li>
+        <li><a href="/contact">contact</a></li>
+      </ul>
+    </div>
+  </section>
 </article>
