--- a/css/main.scss
+++ b/css/main.scss
@@ -2,3 +2,74 @@
 ---
 @import "_variables";
 @import "_base";
+
+$color-bar-width: 4rem;
+article.navbar-wrapper {
+  width: 30%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  article.nav {
+    height: 100%;
+    width: 100%;
+    section.color-bar {
+      background-color: $brand-color;
+      width: $color-bar-width;
+      height: 100%;
+      display: block;
+      position: absolute;
+      left: 0;
+    }
+    section.content {
+      padding-left: $color-bar-width;
+      text-align: center;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      div.blurb {
+        margin-top: 16rem;
+        h1 {
+          margin-bottom: 1.5rem;
+          a {
+            text-transform: uppercase;
+            font-weight: bold;
+            color: black;
+            text-decoration: none;
+          }
+        }
+        ul li {
+          display: inline-block;
+          margin: .75rem .5rem;
+          a {
+            padding-bottom: .5rem;
+            border-bottom: 2px solid white;
+            transition: ease all .5s;
+            color: $font-grey;
+            &:hover {
+              text-decoration: none;
+              border-color: black;
+              color: black;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+article.content-wrapper {
+  position: absolute;
+  left: 30%;
+  top: 0;
+  overflow-y: auto;
+  width: 70%;
+  height: 100vh;
+}
+
+article.home {
+  background-image: url('/img/emily1.jpg');
+  background-size: cover;
+  height: 100%;
+  background-position: right bottom;
+}
