--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -6,3 +6,11 @@ body {
   font-family: $base-font-family;
   font-size: 1.6rem;
 }
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+}
+
+h1 {
+  font-weight: bold;
+}
