updated font to the one emily wanted

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,8 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Merriweather:400,700');
-
-
 // Our variables
-$base-font-family: 'Merriweather', serif;
+$base-font-family: 'Playfair Display', serif;
 
 $brand-color: #cce2d1;
 
