--- a/_includes/_navbar.html
+++ b/_includes/_navbar.html
@@ -6,14 +6,14 @@
   <section class="content">
     <div class="blurb">
       <h1><a href="/">Emily Gorey</a></h1>
-      <h4>------------------------</h4>
+      <h4>---------------------------</h4>
       <ul class="list-unstyled">
-        <li><a href="/about">about</a></li>
-        <li><a href="/resume">resume</a></li>
-        <li><a href="/portfolio">portfolio</a></li>
+        <li><a class="{{ page.about_active }}" href="/about">about</a></li>
+        <li><a class="{{ page.resume_active }}" href="/resume">resume</a></li>
+        <li><a class="{{ page.portfolio_active }}" href="/portfolio">portfolio</a></li>
         <br>
-        <li><a href="/blog">blog</a></li>
-        <li><a href="/contact">contact</a></li>
+        <li><a class="{{ page.blog_active }}" href="/blog">blog</a></li>
+        <li><a class="{{ page.contact_active }}" href="/contact">contact</a></li>
       </ul>
     </div>
   </section>
