--- a/css/main.scss
+++ b/css/main.scss
@@ -30,13 +30,16 @@ article.navbar-wrapper {
       div.blurb {
         margin-top: 16rem;
         h1 {
-          margin-bottom: 1.5rem;
+          margin-bottom: 1rem;
           a {
             text-transform: uppercase;
             font-weight: bold;
             color: black;
             text-decoration: none;
           }
+        }
+        h4 {
+          cursor: default;
         }
         ul li {
           display: inline-block;
@@ -45,8 +48,8 @@ article.navbar-wrapper {
             padding-bottom: .5rem;
             border-bottom: 2px solid white;
             transition: ease all .5s;
-            color: $font-grey;
-            &:hover {
+            color: $brand-color-dark;
+            &:hover, &.active {
               text-decoration: none;
               border-color: black;
               color: black;
