--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -2,5 +2,5 @@
 $base-font-family: 'Playfair Display', serif;
 
 $brand-color: #cce2d1;
-$brand-color-dark: #729179;
+$brand-color-dark: #70a07a;
 $font-grey: #808080;
