responsive fixes to home and about

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
         <article class="col-lg-4 navbar-wrapper">
           {% include _navbar.html %}
         </article>
-        <article class="col-lg-8">
+        <article class="col-lg-8 content-wrapper">
           {{ content }}
         </article>
       </div>
