--- a/css/main.scss
+++ b/css/main.scss
@@ -275,24 +275,52 @@ article.blog {
     border-left: 2px solid $brand-color;
   }
   .gallery {
-    // display: flex;
-    // flex-direction: row;
-    // flex-wrap: wrap;
-    // justify-content: space-around;
-    .img-wrapper {
-      // overflow: hidden;
-      justify-content: center;
-      align-items: center;
-      display: flex;
-    }
+    -webkit-column-count: 3;
+    -webkit-column-gap:   15px;
+    -moz-column-count:    3;
+    -moz-column-gap:      15px;
+    column-count:         3;
+    column-gap:           15px;
     img {
-      // min-height: 100%;
-      max-width: 100%;
-      max-height: 30rem;
-      margin-bottom: 3rem;
+      width: 100%;
+      height: auto;
+      margin-bottom: 15px;
+    }
+    @media (max-width: 991.99px) {
+      -webkit-column-count: 2;
+      -webkit-column-gap:   15px;
+      -moz-column-count:    2;
+      -moz-column-gap:      15px;
+      column-count:         2;
+      column-gap:           15px;
     }
   }
   p {
     margin-bottom: 2rem;
+  }
+}
+
+article.portfolio {
+  @extend .sub-page;
+  section.columns {
+    -webkit-column-count: 3;
+    -webkit-column-gap:   15px;
+    -moz-column-count:    3;
+    -moz-column-gap:      15px;
+    column-count:         3;
+    column-gap:           15px;
+    img {
+      width: 100%;
+      height: auto;
+      margin-bottom: 15px;
+    }
+    @media (max-width: 991.99px) {
+      -webkit-column-count: 2;
+      -webkit-column-gap:   15px;
+      -moz-column-count:    2;
+      -moz-column-gap:      15px;
+      column-count:         2;
+      column-gap:           15px;
+    }
   }
 }
