--- a/css/main.scss
+++ b/css/main.scss
@@ -322,13 +322,13 @@ article.portfolio {
         opacity: .8;
       }
     }
-    @media (max-width: 991.99px) {
-      -webkit-column-count: 2;
-      -webkit-column-gap:   15px;
-      -moz-column-count:    2;
-      -moz-column-gap:      15px;
-      column-count:         2;
-      column-gap:           15px;
-    }
+    // @media (max-width: 991.99px) {
+    //   -webkit-column-count: 2;
+    //   -webkit-column-gap:   15px;
+    //   -moz-column-count:    2;
+    //   -moz-column-gap:      15px;
+    //   column-count:         2;
+    //   column-gap:           15px;
+    // }
   }
 }
