fixed formspree i think

--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -6,6 +6,9 @@
 <meta name="author" content="{{site.author}}">
 <meta name="description" content="{{site.description}}">
 
+<!-- Needed for Formspree -->
+<meta name="referrer" content="origin" />
+
 <!-- favicon -->
 <link rel="shortcut icon" type="image/x-icon" href="{{ site.url }}/favicon.ico" type="image/x-icon">
 
