--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,7 +1,7 @@
 // Our variables
 $base-font-family: 'Playfair Display', serif;
 
-$brand-color: #cce2d1;
-$brand-color-dark: #70a07a;
+$brand-color: #FFC6C6;
+$brand-color-dark: #D45656;
 
 $font-grey: #707070;
