--- a/css/main.scss
+++ b/css/main.scss
@@ -102,7 +102,7 @@ article.nav {
 }
 
 article.home {
-  background-image: url('/img/emily1.jpg');
+  background-image: url('/img/me!!.jpg');
   background-size: cover;
   height: 100%;
   padding: 0;
